unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/Tech_Hexalis_Dossier_Import__c.object-meta.xml
<CustomObject>
    <label>Tech Hexalis Dossier Import</label>
    <nameField>
        <label>Tech Hexalis Dossier Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Hexalis Dossier Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>