unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Adresse_Patient__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Patient__c</fullName>
    <label>Adresse Patient</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>