unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Code_Genre_Patient__c.field-meta.xml
<CustomField>
    <fullName>Code_Genre_Patient__c</fullName>
    <label>Code Genre Patient</label>
    <length>50</length>
    <type>Text</type>
</CustomField>