unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Code_Postal_Patient__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Patient__c</fullName>
    <label>Code Postal Patient</label>
    <length>18</length>
    <type>Text</type>
</CustomField>