unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Code_Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Code_Prescripteur__c</fullName>
    <label>Code Prescripteur</label>
    <length>18</length>
    <type>Text</type>
</CustomField>