unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Date_Creation_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Date_Creation_Dossier__c</fullName>
    <label>Date Creation Dossier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>