unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Date_Naissance_Patient__c.field-meta.xml
<CustomField>
    <fullName>Date_Naissance_Patient__c</fullName>
    <label>Date Naissance Patient</label>
    <length>20</length>
    <type>Text</type>
</CustomField>