unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Date_Prelevement__c.field-meta.xml
<CustomField>
    <fullName>Date_Prelevement__c</fullName>
    <label>Date Prelevement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>