unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Lib_Espece_Patient__c.field-meta.xml
<CustomField>
    <fullName>Lib_Espece_Patient__c</fullName>
    <label>Lib Espece Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>