unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Prenom_Patient__c.field-meta.xml
<CustomField>
    <fullName>Prenom_Patient__c</fullName>
    <label>Prenom Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>