unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/fields/Statut_Traitement__c.field-meta.xml
<CustomField>
    <fullName>Statut_Traitement__c</fullName>
    <defaultValue>&#39;New&#39;</defaultValue>
    <label>Statut Traitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Traite</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>