unpackaged/main/default/objects/Tech_Hexalis_Dossier_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Creation_Dossier__c</columns>
    <columns>Code_Dossier__c</columns>
    <columns>Statut_Traitement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Dossier__c</field>
        <operation>equals</operation>
        <value>17/06/22-1-0060</value>
    </filters>
    <label>All</label>
</ListView>